--- a/config.toml
+++ b/config.toml
@@ -60,7 +60,7 @@ phone = "+880 2544 658 256"
 email = "ozhang.mfa2021@london.edu"
 address = "London Business School, Regent’s Park, London, NW1 4SA, United Kingdom "
 # meta description
-author = "Xuan(Olivia) Zhang"
+author = "Olivia Zhang"
 description = "This is meta description"
 # google analytics
 google_analytics_id = "" # Your ID
