--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -1,6 +1,6 @@
 # banner
 banner:
-  title : "Hi! I’m <br> Olivia <br> Student at LBS"
+  title : "Hi! I’m <br> Olivia <br> Student at London Business School"
 
 # about
 about:
